<resources>
    <string name="app_name">TimeWise</string>
    <string name="delete_warning_title">Are you sure?</string>
    <string name="delete_warning_body">This operation cannot be reverted</string>
    <string name="delete_confirm_button">Confirm</string>
    <string name="delete_cancel_button">Cancel</string>
    <string name="subject">Subject</string>
    <string name="timesheet">Timesheet</string>
    <string name="delete_menu_item_label">Delete</string>
    <string name="edit_menu_item_label">Edit</string>
    <string name="edit_dialog_save_button">Save</string>
    <string name="edit_dialog_cancel_button">Cancel</string>
    <string name="edit_dialog_start_time_text_field">Start time</string>
    <string name="edit_dialog_end_time_text_field">End time</string>
    <string name="incorrect_time_was_entered">Incorrect time was entered</string>
    <string name="date_filter_all">All</string>
    <string name="date_filter_last_week">Last week</string>
    <string name="date_filter_this_week">This week</string>
    <string name="date_filter_today">Today</string>
    <string name="date_filter_yesterday">Yesterday</string>
    <string name="bottom_sheet_date_title">Date</string>
    <string name="bottom_sheet_custom">Custom</string>
    <string name="dialog_confirm_button">OK</string>
    <string name="dialog_dismiss_button">Cancel</string>
    <string name="edit_dialog_start_date_label">Start date</string>
    <string name="edit_dialog_error_supporting_text">Incorrect date was entered</string>
    <string name="search_bar_search_placeholder">Search</string>
    <string name="add_dialog_header">Add time interval</string>
    <string name="search_no_matches_info">No matches for this search</string>
    <string name="snackbar_time_tracker_started">Time tracker started</string>
    <string name="snackbar_action_reset">Reset</string>
    <string name="empty_day_sections_message">Start stopwatch\nor\nadd your first time interval</string>
    <string name="select_time">Select Time</string>
    <string name="time_tracker_start_time">"Start time: "</string>
    <string name="time_tracker_end_time">"End time: "</string>
    <string name="emptyTime">--:--:--</string>
    <string name="plus_5">+5</string>
    <string name="plus_15">+15</string>
    <string name="plus_30">+30</string>
    <string name="minus_5">-5</string>
    <string name="minus_15">-15</string>
    <string name="minus_30">-30</string>
    <string name="additional_days">+ %s days</string>
    <string name="time_interval">%s - %s</string>
    <string name="start_button">Start button</string>
    <string name="stop_button">Stop button</string>
    <string name="subject_field">Subject field</string>
    <string name="date_filter">Date filter</string>
    <string name="date_range_picker">Date Range Picker</string>
</resources>